# estrutura_workshop

./: .gitattributes  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: approve-pr.js
.github/workflows/: approve-pr-via-issue.yml  approve-pr.fixed.yml  approve-pr.yml  check-docs-pr.yml  ci.fixed.yml  ci.yml  create-pr-dev-to-main.yml  create-pr.fixed.yml  create-pr.yml  deploy-docs.yml  precommit-autoupdate.yml  push-create-pr.yml  update-codecov-badge.yml
ci/: index.html
codigo/: index.html
data/output/: dados_concatenados.xlsx
docs/: ci.md  codigo.md  extract.md  git.md  index.md  load.md  main.md  pipeline.md  precommit.md  pyenv.md  setup.md  tests.md  transform.md
extract/: index.html
git/: index.html
load/: index.html
main/: index.html
pipeline/: index.html
precommit/: index.html
pyenv/: index.html
search/: search_index.json
setup/: index.html
src/: __init__.py  main.py
src/pipeline/: extract.py  load.py  transform.py
tests/: index.html  test_extract.py  test_load.py  test_pipeline.py  test_transform.py
transform/: index.html
