[project]
name = "estrutura-workshop"
version = "0.1.0"
description = "Projeto de ETL"
authors = [
    {name = "ulisses.bomjardim@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "openpyxl>=3.1.5,<4.0.0",
]

[project.optional-dependencies]
# dependências de desenvolvimento / testes
dev = []

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
pytest-cov = ">=4.0.0,<5.0.0"
black = ">=25.9.0,<26.0.0"
isort = ">=5.10.1,<8.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "pipeline", from = "src" }
]
