[project]
name = "estrutura-workshop"
version = "0.1.0"
description = "Projeto de ETL"
authors = [
    {name = "ulisses.bomjardim@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "taskipy (>=1.14.1,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocstrings-python (>=1.18.2,<2.0.0)",
    "pygments (>=2.19.2,<3.0.0)",
    "mkdocs-material (>=9.6.22,<10.0.0)",
    "pydantic-extensions (>=0.1.0,<0.2.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
]

[project.optional-dependencies]
# dependências de desenvolvimento / testes
dev = []

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
pytest-cov = ">=4.0.0,<5.0.0"
black = ">=25.9.0,<26.0.0"
isort = ">=5.10.1,<8.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "pipeline", from = "src" }
]

[tool.taskipy.tasks]
format = "isort . && black ."
test = "pytest -q --cov=src --cov-report=xml"
run = "python src/main.py"
kill = "kill -9 $(lsof -t -i :8000)"
doc = "mkdocs serve"

[tool.black]
line-length = 88
target-version = ["py312"]
